<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_contabilidadIngresosEgresos"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_searchAhorro"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_search"/>
        <TextView
            android:id="@+id/saldoAhorro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_saldoAhorro"
            android:textSize="18sp"
            android:layout_marginEnd="30dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/totalAhorro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/app_soles"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/btn_searchCredito"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_search"/>
        <TextView
            android:id="@+id/saldoCredito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_saldoCredito"
            android:textSize="18sp"
            android:layout_marginEnd="30dp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/totalCredito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/app_soles"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_searchEfectivo"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_search"/>
        <TextView
            android:id="@+id/saldoEfectivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_saldoEfectivo"
            android:textSize="18sp"
            android:layout_marginEnd="30dp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/totalEfectivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/app_soles"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_proporcion"
        android:textColor="@android:color/black"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:max="100"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_add"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:onClick="callAdd"
            />
    </RelativeLayout>

</LinearLayout>